--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>pl.nask.hsn2</groupId>
   <artifactId>hsn2-data-store</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
   <name>hsn2-data-store</name>
   <dependencies>
     <dependency>
@@ -12,14 +12,14 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>org.apache.commons</groupId>
+    	<groupId>commons-io</groupId>
     	<artifactId>commons-io</artifactId>
-    	<version>1.3.2</version>
+    	<version>1.4</version>
     </dependency>
     <dependency>
     	<groupId>org.slf4j</groupId>
     	<artifactId>slf4j-log4j12</artifactId>
-    	<version>1.6.1</version>
+    	<version>1.6.5</version>
     </dependency>
   </dependencies>
   
@@ -71,6 +71,7 @@
 			  		
 			  <plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2-beta-5</version>
 	            <executions>
 	              <execution>
 	                <id>hsn2</id>
