--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
     	<version>1.4</version>
     </dependency>
     <dependency>
+    	<groupId>commons-daemon</groupId>
+    	<artifactId>commons-daemon</artifactId>
+    	<version>1.0.10</version>
+    </dependency>
+    <dependency>
     	<groupId>org.slf4j</groupId>
     	<artifactId>slf4j-log4j12</artifactId>
     	<version>1.6.5</version>
