--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: hsn2-data-store
 Section: misc
 Priority: optional
 Maintainer: Paweł Jacewicz <pawel.jacewicz@cert.pl>
-Build-Depends: debhelper (>= 8), openjdk-7-jdk, javahelper (>= 0.43) , maven2, maven-debian-helper, libcommons-io-java, libslf4j-java, libmaven-assembly-plugin-java
+Build-Depends: debhelper (>= 8), openjdk-7-jdk, javahelper (>= 0.43) , maven2, maven-debian-helper, libcommons-io-java, libslf4j-java, libmaven-assembly-plugin-java, libcommons-daemon-java
 Standards-Version: 3.9.3
 Homepage: http://www.honeyspider.net
 
