--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <version>1.0.1-SNAPSHOT</version>
   <name>hsn2-data-store</name>
   <dependencies>
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>6.1.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
+	<dependency>
+		<groupId>com.googlecode.jmockit</groupId>
+		<artifactId>jmockit</artifactId>
+		<version>1.0</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
     	<groupId>commons-io</groupId>
     	<artifactId>commons-io</artifactId>
     	<version>1.4</version>
@@ -25,6 +25,22 @@
     	<groupId>org.slf4j</groupId>
     	<artifactId>slf4j-log4j12</artifactId>
     	<version>1.6.5</version>
+    </dependency>
+  	<dependency>
+  		<groupId>commons-cli</groupId>
+  		<artifactId>commons-cli</artifactId>
+  		<version>1.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>pl.nask.hsn2</groupId>
+  		<artifactId>hsn2-commons-bus</artifactId>
+  		<version>2.0.0-SNAPSHOT</version>
+  	</dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.8</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   
