--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
       <version>6.8</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.fallabs</groupId>
+    	<artifactId>kyotocabinet-java</artifactId>
+    	<version>1.24</version>
+    </dependency>
   </dependencies>
   
   <build>
