--- a/pom.xml
+++ b/pom.xml
@@ -31,16 +31,16 @@
   		<artifactId>commons-cli</artifactId>
   		<version>1.2</version>
   	</dependency>
-  	<dependency>
-  		<groupId>pl.nask.hsn2</groupId>
-  		<artifactId>hsn2-commons-bus</artifactId>
-  		<version>2.0.0-SNAPSHOT</version>
-  	</dependency>
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.8</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>pl.nask.hsn2</groupId>
+    	<artifactId>hsn2-service-commons</artifactId>
+    	<version>2.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   
