--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -5,7 +6,20 @@
 	<artifactId>hsn2-data-store</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<name>hsn2-data-store</name>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<compiler.plugin.version>3.0</compiler.plugin.version>
+		<jar.plugin.version>2.4</jar.plugin.version>
+		<assembly.plugin.version>2.4</assembly.plugin.version>
+	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>pl.nask.hsn2</groupId>
+			<artifactId>hsn2-service-commons</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>com.googlecode.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
@@ -39,11 +53,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>pl.nask.hsn2</groupId>
-			<artifactId>hsn2-service-commons</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.3.170</version>
@@ -54,39 +63,15 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${compiler.plugin.version}</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
-					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
-
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
-					</configuration>
-				</plugin>
-				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<configuration>
-						<archive>
-							<manifest>
-								<mainClass>pl.nask.hsn2.DataStore</mainClass>
-							</manifest>
-						</archive>
-						<descriptorRefs>
-							<descriptorRef>jar-with-dependencies</descriptorRef>
-						</descriptorRefs>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
+
 	<profiles>
 		<profile>
 			<id>bundle</id>
@@ -94,6 +79,7 @@
 				<plugins>
 					<plugin>
 						<artifactId>maven-jar-plugin</artifactId>
+						<version>${jar.plugin.version}</version>
 						<configuration>
 							<archive>
 								<manifest>
@@ -107,7 +93,7 @@
 
 					<plugin>
 						<artifactId>maven-assembly-plugin</artifactId>
-						<version>2.2-beta-5</version>
+						<version>${assembly.plugin.version}</version>
 						<executions>
 							<execution>
 								<id>hsn2</id>
@@ -120,6 +106,44 @@
 									<descriptors>
 										<descriptor>src/main/assembly/hsn2.xml</descriptor>
 									</descriptors>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>onejar</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>${assembly.plugin.version}</version>
+						<configuration>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+						<executions>
+							<execution>
+								<id>make-assembly</id> <!-- this is used for inheritance merges -->
+								<phase>package</phase> <!-- bind to the packaging phase -->
+								<goals>
+									<goal>single</goal>
+								</goals>
+								<configuration>
+									<attach>false</attach>
+									<archive>
+										<manifest>
+											<addClasspath>false</addClasspath>
+											<mainClass>pl.nask.hsn2.DataStore</mainClass>
+										</manifest>
+										<manifestEntries>
+											<Class-Path>.</Class-Path>
+										</manifestEntries>
+									</archive>
 								</configuration>
 							</execution>
 						</executions>
