--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.6.5</version>
+			<version>1.7.5</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
@@ -68,6 +68,10 @@
 					<source>1.7</source>
 					<target>1.7</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14.1</version>
 			</plugin>
 		</plugins>
 	</build>
