--- a/debian/control
+++ b/debian/control
@@ -10,5 +10,6 @@ Architecture: all
 Depends: ${misc:Depends}, java-wrappers, openjdk-7-jre, jsvc
 Homepage: http://www.honeyspider.net
 Description: HSN 2.0 Data Store
- HSN 2.0 Data Store keeps all files downloaded
- by the Web Client.
+ A simple database that can store arbitrary binary data.
+ Interaction is possible via a REST interface.
+ It is optimized for storing large objects, e.g. files, long lists.
