--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>pl.nask.hsn2</groupId>
 	<artifactId>hsn2-data-store</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
-	<name>hsn2-data-store</name>
+	<name>HSN2 Data Store</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -167,4 +167,7 @@
 			</build>
 		</profile>
 	</profiles>
+	<description>A simple database that can store arbitrary binary data.
+Interaction is possible via a REST interface.
+It is optimized for storing large objects, e.g. files, long lists.</description>
 </project>
